Added the container,navbar and form sections

--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
      <script src="./js/main.js"></script> 
 </head>
 <body>
+          <!-- container section -->
+          <div class="container">
+            <!-- nav bar -->
+            <div class="navigation-bar">
+              <ul>
+                <li>
+                  <a class="navigation-bar_element_link" href="./index.html">Home</a>
+                </li>
+                <li>
+                  <a class="navigation-bar_element_link" href="./about.html">About</a>
+                </li>
+              </ul>
+            </div>
+            <!-- form section -->
+            <div class="card">
+              <!-- header section -->
+              <div class="webpage-header">
+                <h1 class="webpage-header_element_title">L’ora della Pizza</h1>
+              </div>
+              <!-- form for the user to fill -->
+              <form id="get-pizza-order">
+                <div class="form-section">
+                  <div class="row">
     
 </body>
 </html>
