Added images section and place order section

--- a/index.html
+++ b/index.html
@@ -93,7 +93,59 @@
                       placeholder="Choose quantity"
                     />
                   </div>
-                </div>    
+                </div>
+                 <!-- users total-->
+              <div class="message-for-user">
+                <p class="message-for-user_element_total">
+                  <em
+                    >It's <strong>PIZZA</strong> season! order &
+                    <strong>ENJOY</strong>!</em
+                  >
+                </p>
+              </div>
+              <!-- place pizza order section-->
+              <!-- users total section-->
+              <div class="pizza-order form-group">
+                <button type="submit" class="btn btn-outline-warning">
+                  Place Order
+                </button>
+              </div>
+            </div>
+          </form>
+          <!-- images - pizza? -->
+          <div class="images">
+            <!-- grid system - for better responsiveness -->
+            <div class="row">
+              <div class="col-md-4">
+                <p>
+                  <img
+                    class="pic"
+                    src="./img/.png"
+                    alt="Pizza?"
+                  />
+                </p>
+              </div>
+              <div class="col-md-4">
+                <p>
+                  <img
+                    class="pic"
+                    src="./img/.png"
+                    alt="Pizza?"
+                  />
+                </p>
+              </div>
+              <div class="col-md-4">
+                <p>
+                  <img
+                    class="pic"
+                    src="./img/.png"
+                    alt="Pizza?"
+                  />
+                </p>
+              </div>
+            </div>
+          </div>  
+            
     
 </body>
 </html>
