body container styling

--- a/index.html
+++ b/index.html
@@ -144,8 +144,24 @@
                 </p>
               </div>
             </div>
-          </div>  
-            
+          </div> 
+          <!-- webpage caption -->
+          <div class="page-caption">
+              <p class="page-caption_element_caption">
+                   Pick your order from the <em>restaurant</em> or have
+                     <strong>us</strong> deliver it to your
+                     <em>location</em>
+              </p>
+          </div>
+        </div>
+        <!-- footer section -->
+        <div class="footer-section">
+           <p class="footer-section_element_rights">
+               Copy &copy; 2021 victor
+            </p>
+         </div>
+      </div>       
+
     
 </body>
 </html>
