--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <p>
                   <img
                     class="pic"
-                    src="./img/.png"
+                    src="./images/image1.jpeg"
                     alt="Pizza?"
                   />
                 </p>
@@ -129,7 +129,7 @@
                 <p>
                   <img
                     class="pic"
-                    src="./img/.png"
+                    src="./images/image2.jpeg"
                     alt="Pizza?"
                   />
                 </p>
@@ -138,7 +138,7 @@
                 <p>
                   <img
                     class="pic"
-                    src="./img/.png"
+                    src="./images/image3.jpeg"
                     alt="Pizza?"
                   />
                 </p>
