Adding navbar content

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <div class="navigation-bar">
               <ul>
                 <li>
-                  <a class="navigation-bar_element_link" href="./index.html">Home</a>
+                  <a class="navigation-bar_element_link" href="./index.html">Welcome to Pizzeria</a>
                 </li>
                 <li>
-                  <a class="navigation-bar_element_link" href="./about.html">About</a>
+                  <a class="navigation-bar_element_link" href="./index.html">an alluring pizza experience</a>
                 </li>
               </ul>
             </div>
@@ -157,7 +157,7 @@
         <!-- footer section -->
         <div class="footer-section">
            <p class="footer-section_element_rights">
-               Copy &copy; 2021 victor
+               Copyright &copy; 2021 victor
             </p>
          </div>
       </div>       
