--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script type = "text/javascript" src="./js/main.js"></script>
 
-    <link href="./css/bootstrap.css/" rel="stylesheet" type="text/css">
+    <!-- <link href="./css/bootstrap.css/" rel="stylesheet" type="text/css"> -->
     <link href="./css/styles.css" rel="stylesheet" type="text/css">
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" 
